# eosquality

./: .gitignore  CLAUDE.md  README.md  access.json  pyproject.toml
assets/docs/: diagram.md
data/docs/: eosquality_claude_code_brief.md
data/indices/ersilia_reference_library_v1/: knn_distances.npy  knn_indices.npy  metadata.json  vector_index.h5
scripts/: run_all_scores.sh  test_run.sh  test_scores.py
src/eosquality/: __init__.py  _download.py  _library.py  basic_descriptors.py  cli.py  config.py  exceptions.py  preprocess.py  quality.py  vectorindex.py
src/eosquality/cli/: __init__.py  build.py  download.py  fit.py  run.py
src/eosquality/io/: load.py  save.py
src/eosquality/knn/: __init__.py  fit.py  load.py  save.py  state.py
src/eosquality/neighbors/: sklearn_backend.py
src/eosquality/preprocess/: pipeline.py
src/eosquality/quality/: api.py
src/eosquality/reference/: diagnostics.py  fit_state.py  metadata.py
src/eosquality/schema/: infer.py  models.py
src/eosquality/scores/: __init__.py  _descriptors.py  _helpers.py  consistency.py  extremity.py  signal.py  support.py  typicality.py
src/eosquality/scoring/: run.py  typicality.py
src/eosquality/shared/: __init__.py  feature_selection.py  fit.py  load.py  metadata.py  save.py  splitter.py  state.py
src/eosquality/utils/: arrays.py  identifiers.py  logging.py  stats.py
src/eosquality/vectorindex/: backend.py
tests/: conftest.py  test_preprocess_shape_aware.py  test_smoke_fit_run.py  test_typicality.py  test_vectorindex.py  test_versioning.py
(+1 files in other folders)
